; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdbarch.c_gdbarch_tdep.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdbarch.c_gdbarch_tdep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch_tdep = type { i32 }
%struct.gdbarch = type { %struct.gdbarch_tdep* }

@gdbarch_debug = common dso_local global i32 0, align 4
@gdb_stdlog = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"gdbarch_tdep called\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.gdbarch_tdep* @gdbarch_tdep(%struct.gdbarch* %0) #0 {
  %2 = alloca %struct.gdbarch*, align 8
  store %struct.gdbarch* %0, %struct.gdbarch** %2, align 8
  %3 = load i32, i32* @gdbarch_debug, align 4
  %4 = icmp sge i32 %3, 2
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* @gdb_stdlog, align 4
  %7 = call i32 @fprintf_unfiltered(i32 %6, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %5, %1
  %9 = load %struct.gdbarch*, %struct.gdbarch** %2, align 8
  %10 = getelementptr inbounds %struct.gdbarch, %struct.gdbarch* %9, i32 0, i32 0
  %11 = load %struct.gdbarch_tdep*, %struct.gdbarch_tdep** %10, align 8
  ret %struct.gdbarch_tdep* %11
}

declare dso_local i32 @fprintf_unfiltered(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
